- `sort`: updated and reinstated military status/squad membership/burrow membership filter for work animal assignment screen
- `logistics`: ``autoretrain`` will automatically assign trainers to your partially-trained (but not yet domesticated) livestock. this prevents children of partially-trained parents from reverting to wild if you don't notice they were born

## Fixes

## Misc Improvements
- `autobutcher`: prefer butchering partially trained animals and save fully domesticated animals to assist in wildlife domestication programs
- `autodump`: can now teleport items loosely stored in buildings (clutter)
- When launched from the Steam client on Linux, both Dwarf Fortress and DFHack will be shown as "Running". This ensures that DF has proper accounting for Linux player usage.
- `suspendmanager`: improve performance when there are many active jobs
- `clean`: protect farm plots when cleaning mud

## Documentation
- `overlay-dev-guide`: updated examples and troubleshooting steps
- `introduction`: refresh getting started content
- `quickstart`: refresh quickstart guide

## API

## Lua
- ``widgets.Label``: ``*pen`` attributes can now either be a pen or a function that dynamically returns a pen
- `helpdb`: ``search_entries`` now returns a match if *all* filters in the ``include`` list are matched. previous behavior was to match if *any* ``include`` filter matched.

## Removed

# 50.12-r1.1

## Fixes
- `sort`: fix crash when assigning work animals to units

## Removed
- offline HTML rendered docs are no longer distributed with DFHack since they are randomly triggering Windows Defender antivirus heuristics. If you want to download DFHack docs for offline browsing, you can still get them from the Downloads link at https://dfhack.org/docs

# 50.12-r1

## Misc Improvements
- `sort`: squad assignment overlay rewritten for compatiblity with new vanilla data structures and screen layouts

## Fixes